--- a/.kick.yml
+++ b/.kick.yml
@@ -1,13 +1,16 @@
 # Kickstart container config file - see https://gitub.com/infracamp/kickstart
 # Run ./kickstart.sh to start a development-container for this project
 version: 1
-from: "nfra/kickstart-flavor-php:7.4"
+from: "nfra/kickstart-flavor-php:unstable"
+
+packages: [php8.0-curl, php8.0-http, php8.0-raphf]
+
 command:
   build:
     - "composer update"
   init:
   test:
-    - "vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox test"
+    - "ptest"
   run:
   dev:
     - "echo 'I am executed in dev mode'"
